--- a/README.org
+++ b/README.org
@@ -13,16 +13,19 @@ associated file that stores file attributes), so any tools here are
 likely to be oriented towards this way of working as opposed to one
 that involves creating disk images or what have you.
 
-The tools are briefly described here. For more info, run with =-h= on
-the command line.
+The tools are briefly described here. For more info, run each with
+=-h= on the command line.
 
 * BBCBasicToText
 
-Python 2.x script that converts tokenized BBC BASIC files to text.
+Python 2.7 script that converts tokenized BBC BASIC files to text.
 Originally by [[https://github.com/mattgodbolt][Matt Godbolt]]. I updated it with support for line numbers
 and BASIC II.
 
 Execute with =-h= to get a help page.
+
+(If you want to use this to produce output for use with =*EXEC= on the
+BBC, use the =--cr= option.)
 
 Note: =BBCBasicToText= can be used in a pipeline, but when used this
 way it might not work properly on Windows as it doesn't reopen stdin
